# officeplanner

./: .gitignore  Dockerfile  README.md  channels.txt  docker-compose.yml  officeplanner.py  pyproject.toml  requirements.in  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-publish.yml  codeql.yml  pr-lint.yaml
docs/: README.md
